[tool.poetry]
name = "moments"
version = "0.1.0"
description = ""
authors = ["xiechuxi"]
license = "apache-license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "4.4.0.46"
opencv-python = "4.4.0.46"
bilili = "^1.4.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
