[tool.poetry]
name = "moments"
version = "0.1.0"
description = ""
authors = ["xiechuxi"]
license = "apache-license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
opencv-contrib-python = "4.4.0.46"
opencv-python = "4.4.0.46"
bilili = "^1.4.13"
weaviate-client = "^3.16.2"
elasticsearch = "^8.7.0"
jina = "^3.15.0"
transformers = "^4.28.1"
sentencepiece = "^0.1.99"
langchain = "0.0.168"
openai = "^0.27.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
